fixe title in forefox

--- a/scss/tk.scss
+++ b/scss/tk.scss
@@ -48,6 +48,7 @@ main {
     text-transform: uppercase;
     margin-left: 0;
     padding: 0 14px;
+    line-height: 64px !important;
 }
 
 .toolbar-nav {
